# quizgen

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: english.rs  lib.rs  mcq.rs  webster.rs  words_api.rs
crates/web/: Cargo.toml
crates/web/src/: error.rs  main.rs  routes.rs  session.rs
crates/web/static/css/: style.css
crates/web/static/js/: constellation.js  ui.js
crates/web/templates/: base.html  index.html  question.html  results.html
src/: english.rs  lib.rs  main.rs  mcq.rs  webster.rs  words_api.rs
