[package]
name = "quizgen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.48", features = ["derive", "env"] }
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.17"
url = "2.5.4"
