[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quizgen"
path = "src/main.rs"

[dependencies]
quizgen-core = { path = "../core" }
anyhow = "1.0.98"
clap = { version = "4.5.48", features = ["derive", "env"] }
inquire = "0.9.0"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
