[package]
name = "web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quizgen-web"
path = "src/main.rs"

[dependencies]
quizgen-core = { path = "../core" }
anyhow = "1.0.98"
axum = { version = "0.8", features = ["macros"] }
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
tower-cookies = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
